論文のリンク追加

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 	<meta property="og:title" content="Atsuto Inoue Portfolio"/>
 	<meta property="og:url" content="https://atsuhan.github.io/"/>
 	<meta property="og:description" content="井上敦登の自己紹介ページ"/>
+	<meta property="og:image" content="">
 	<meta name="twitter:title" content="Atsuto Inoue Portfolio" />
 	<meta name="twitter:url" content="https://atsuhan.github.io/" />
-	<meta name="twitter:card" content="" />
-	<link rel="shortcut icon" href="favicon.ico">
+	<!-- meta name="twitter:card" content="" / -->
+	<!-- link rel="shortcut icon" href="favicon.ico" -->
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -55,10 +56,11 @@
 
 							<p>2012年4月　早稲田大学基幹理工学部 入学</p>
 							<p>2013年8月 ~ 2014年8月　弓道サークル本陣にて幹事長を経験</p>
+							<p>2015年6月 ~ 7月　マルタ共和国で英語留学</p>
 							<p>2016年3月　早稲田大学基幹理工学部表現工学科 卒業</p>
 							<p>2016年4月　早稲田大学大学院 基幹理工学研究科 表現工学専攻 入学</p>
 							<p>2016年8月　日本音響学会 秋季研究発表会にて<a href="http://www.asj.gr.jp/recommending/index.html">学生優秀賞</a>を受賞</p>
-							<p>2016年12月 日米音響学会ジョイントミーティングに参加(ポスター発表)</p>
+							<p>2016年12月 第5回 日米音響学会ジョイントミーティングにてポスター発表</p>
 						</div>
 					</div>
 					<!--
@@ -82,18 +84,18 @@
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<h1>シースルー型ヘッドマウントディスプレイを用いた三次元音場情報の可視化</h1>
+							<h2>シースルー型ヘッドマウントディスプレイを用いた三次元音場情報の可視化</h2>
 
 							<figure class="text-center">
 								<img src="images/vsf00.png" alt="vsf00">
 							</figure>
 
 							<figure class="text-center">
-								<img src="images/vsf01.JPG" alt="vsf01">
+								<img src="images/vsf02.png" alt="vsf02">
 							</figure>
 
 							<figure class="text-center">
-								<img src="images/vsf02.png" alt="vsf02">
+								<img src="images/vsf01.JPG" alt="vsf01">
 							</figure>
 
 							<div class="fh5co-feature">
@@ -125,8 +127,10 @@
 									<i class="icon-graduation-cap"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2016/11</h2>
-									<p>A. Inoue, Y. Ikeda, K. Yatabe and Y. Oikawa, ``Three-dimensional sound-field visualization system using head mounted display and stereo camera,''  5th Joint Meet. Acoust. Soc. Am. Acoust. Soc. Jpn., Hawaii, Nov.--Dec. 2016.</p>
+									<h2>2016/12</h2>
+									<a href="pdf/2016_POMA.pdf">
+										<p>A. Inoue, Y. Ikeda, K. Yatabe and Y. Oikawa, "Three-dimensional sound-field visualization system using head mounted display and stereo camera,''  5th Joint Meet. Acoust. Soc. Am. Acoust. Soc. Jpn., Hawaii, Nov.--Dec. 2016.</p>
+									</a>
 								</div>
 							</div>
 
@@ -155,6 +159,23 @@
 									<p>カテゴリ別ページ、作品一覧ページの制作を担当しました。</p>
 								</div>
 							</div>
+
+							<!--
+							<div class="fh5co-feature">
+								<div class="fh5co-icon">
+									<i class="icon-black-tie"></i>
+								</div>
+								<div class="fh5co-text">
+									<h2>2016</h2>
+									<h3>お茶なびゲート公式キャラクターしおにゃん</h3>
+									<figure class="text-center">
+										<img src="images/shionyan00.png" alt="shionyan"><img src="images/shionyan01.JPG" alt="shionyan"><img src="images/shionyan02.JPG" alt="shionyan">
+									</figure>
+									<p>「栞を使ったキャラを考える」というテーマで、しおにゃんが採用されました。</p>
+								</div>
+							</div>
+						-->
+
 
 						</div>
 
