しおニャンページ追加

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<p>2016年3月　早稲田大学基幹理工学部表現工学科 卒業</p>
 							<p>2016年4月　早稲田大学大学院 基幹理工学研究科 表現工学専攻 入学</p>
 							<p>2016年8月　日本音響学会 秋季研究発表会にて<a href="http://www.asj.gr.jp/recommending/index.html">学生優秀賞</a>を受賞</p>
-							<p>2016年12月 第5回 日米音響学会ジョイントミーティングにてポスター発表</p>
+							<p>2016年12月 第5回 日米音響学会ジョイントミーティングにて発表</p>
 						</div>
 					</div>
 					<!--
@@ -103,9 +103,9 @@
 									<i class="icon-graduation-cap"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2016/09</h2>
-									<a href="http://contents.acoust.ias.sci.waseda.ac.jp/publications/ASJ/2016/asj-inoue-2016sep.pdf">
-									<p>井上敦登, 池田雄介, 矢田部浩平, 及川靖広, ``ヘッドマウントディスプレイを用いた三次元音場情報呈示システム,'' 日本音響学会講演論文集, pp.1097--1098, Sep. 2016.（学生優秀発表賞受賞）.</p>
+									<h2>2016/12</h2>
+									<a href="pdf/2016_POMA.pdf">
+										<p>A. Inoue, Y. Ikeda, K. Yatabe and Y. Oikawa, "Three-dimensional sound-field visualization system using head mounted display and stereo camera,''  5th Joint Meet. Acoust. Soc. Am. Acoust. Soc. Jpn., Hawaii, Nov.--Dec. 2016.</p>
 									</a>
 								</div>
 							</div>
@@ -127,9 +127,9 @@
 									<i class="icon-graduation-cap"></i>
 								</div>
 								<div class="fh5co-text">
-									<h2>2016/12</h2>
-									<a href="pdf/2016_POMA.pdf">
-										<p>A. Inoue, Y. Ikeda, K. Yatabe and Y. Oikawa, "Three-dimensional sound-field visualization system using head mounted display and stereo camera,''  5th Joint Meet. Acoust. Soc. Am. Acoust. Soc. Jpn., Hawaii, Nov.--Dec. 2016.</p>
+									<h2>2016/09</h2>
+									<a href="http://contents.acoust.ias.sci.waseda.ac.jp/publications/ASJ/2016/asj-inoue-2016sep.pdf">
+									<p>井上敦登, 池田雄介, 矢田部浩平, 及川靖広, ``ヘッドマウントディスプレイを用いた三次元音場情報呈示システム,'' 日本音響学会講演論文集, pp.1097--1098, Sep. 2016.（学生優秀発表賞受賞）.</p>
 									</a>
 								</div>
 							</div>
@@ -156,11 +156,10 @@
 											<img src="images/jafc.png" alt="jafc">
 										</figure>
 									</a>
-									<p>カテゴリ別ページ、作品一覧ページの制作を担当しました。</p>
+									<p>カテゴリ別&作品一覧ページの制作を担当しました</p>
 								</div>
 							</div>
 
-							<!--
 							<div class="fh5co-feature">
 								<div class="fh5co-icon">
 									<i class="icon-black-tie"></i>
@@ -171,10 +170,9 @@
 									<figure class="text-center">
 										<img src="images/shionyan00.png" alt="shionyan"><img src="images/shionyan01.JPG" alt="shionyan"><img src="images/shionyan02.JPG" alt="shionyan">
 									</figure>
-									<p>「栞を使ったキャラを考える」というテーマで、しおにゃんが採用されました。</p>
+									<p>原画を担当しました</p>
 								</div>
 							</div>
-						-->
 
 
 						</div>
