--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 	<div id="fh5co-main">
 		<div class="fh5co-tab-wrap">
 			<ul class="fh5co-tab-menu">
-				<li class="active"><a href="#" data-tab="1"><span class="icon icon-glass"></span><span class="menu-text">Profile</span></a></li>
+				<li class="active"><a href="#" data-tab="1"><span class="icon icon-user"></span><span class="menu-text">Profile</span></a></li>
 				<li><a href="#" data-tab="2"><span class="icon icon-graduation-cap"></span><span class="menu-text">Research</span></a></li>
 				<li><a href="#" data-tab="3"><span class="icon icon-black-tie"></span><span class="menu-text">Works</span></a></li>
-				<li><a href="#" data-tab="4" data-pie="yes"><span class="icon icon-fighter-jet"></span><span class="menu-text">Skills</span></a></li>
+				<li><a href="#" data-tab="4" data-pie="yes"><span class="icon-pencil"></span><span class="menu-text">Skills</span></a></li>
 			</ul>
 			<div class="fh5co-tab-content active" data-content="1">
 				<div class="fh5co-content-inner">
@@ -224,7 +224,7 @@
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center">
 					<small>
-						Atsuto Inoue Portfolio
+						Atsuto Inoue Portfolio.
 					</small>
 				</div>
 			</div>
