デザインを青っぽく

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-	<title>Atsuto Inoue Portfolio</title>
+	<title>A.Inoue Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="井上敦登の自己紹介ページ" />
-	<meta name="keywords" content="井上敦登, 早稲田大学大学院基幹理工学研究科表現工学専攻,及川靖広研究室" />
-	<meta property="og:title" content="Atsuto Inoue Portfolio"/>
+	<meta name="keywords" content="井上敦登,早稲田大学大学院基幹理工学研究科表現工学専攻,及川靖広研究室,音場の可視化,VR/AR,MR" />
+	<meta property="og:title" content="A.Inoue's Portfolio"/>
 	<meta property="og:url" content="https://atsuhan.github.io/"/>
 	<meta property="og:description" content="井上敦登の自己紹介ページ"/>
 	<meta property="og:image" content="">
-	<meta name="twitter:title" content="Atsuto Inoue Portfolio" />
+	<meta name="twitter:title" content="A.Inoue's Portfolio" />
 	<meta name="twitter:url" content="https://atsuhan.github.io/" />
 	<!-- meta name="twitter:card" content="" / -->
 	<!-- link rel="shortcut icon" href="favicon.ico" -->
@@ -26,7 +26,7 @@
 	<script src="js/modernizr-2.6.2.min.js"></script>
 
 	</head>
-	<body style="background-image: url(images/bg_img.jpg);">
+	<body style="background-image: url(images/backimage.jpg);">
 
 	<div id="fh5co-main">
 		<div class="fh5co-tab-wrap">
@@ -41,26 +41,28 @@
 					<div class="row row-bottom-padded-sm">
 						<div class="col-md-12">
 							<figure class="text-center">
-								<img src="images/profile_img.png" alt="Free HTML5 Wesbite Template by FreeHTML5.co">
+								<img src="images/profile_img.jpg">
 							</figure>
 							<h1>井上敦登 Atsuto Inoue</h1>
 							<p>所属 : 早稲田大学大学院 基幹理工学研究科 表現工学専攻</p>
 							<p>研究室 : <a href="http://www.acoust.ias.sci.waseda.ac.jp/">及川靖広 研究室</a></p>
-							<p>得意分野 : 音響工学、VR/AR</p>
-							<p>アルバイト : 神保町の古本屋案内所、Webサービス制作・運用</p>
-							<p>趣味 : 釣り、スノーボード</p>
+							<p>得意分野 : 音響工学、拡張現実感(AR)</p>
+							<p>アルバイト : 神保町の古本屋案内所、Webサービス開発・運用</p>
+							<p>趣味 : 釣り</p>
 
 							<br>
 							<h4>経歴</h4>
 							<p>1994年2月　千葉県市川市出身</p>
 
+							<p>2012年3月　早稲田高等学校 卒業</p>
 							<p>2012年4月　早稲田大学基幹理工学部 入学</p>
-							<p>2013年8月 ~ 2014年8月　弓道サークル本陣にて幹事長を経験</p>
-							<p>2015年6月 ~ 7月　マルタ共和国で英語留学</p>
+							<p>2013年8月 ~ 2014年8月　弓道サークル本陣(幹事長を経験)</p>
+							<p>2015年6月 ~ 7月　マルタ共和国にて英語留学</p>
 							<p>2016年3月　早稲田大学基幹理工学部表現工学科 卒業</p>
 							<p>2016年4月　早稲田大学大学院 基幹理工学研究科 表現工学専攻 入学</p>
-							<p>2016年8月　日本音響学会 秋季研究発表会にて<a href="http://www.asj.gr.jp/recommending/index.html">学生優秀賞</a>を受賞</p>
-							<p>2016年12月 第5回 日米音響学会ジョイントミーティングにて発表</p>
+							<p>2016年8月　日本音響学会 秋季研究発表会にて発表(<a href="http://www.asj.gr.jp/recommending/index.html">学生優秀賞</a>を受賞)</p>
+							<p>2016年10月 アコースティックイメージング研究会にて発表</p>
+							<p>2016年12月 第5回 日米音響学会ジョイントミーティングにて展示発表</p>
 						</div>
 					</div>
 					<!--
@@ -85,17 +87,14 @@
 					<div class="row">
 						<div class="col-md-12">
 							<h2>シースルー型ヘッドマウントディスプレイを用いた三次元音場情報の可視化</h2>
+							<h4>3D sound field visualization using see-through head mounted display</h4>
 
 							<figure class="text-center">
-								<img src="images/vsf00.png" alt="vsf00">
+								<img src="images/ResearchImage.jpg" alt="vsf00">
 							</figure>
 
 							<figure class="text-center">
 								<img src="images/vsf02.png" alt="vsf02">
-							</figure>
-
-							<figure class="text-center">
-								<img src="images/vsf01.JPG" alt="vsf01">
 							</figure>
 
 							<div class="fh5co-feature">
@@ -133,9 +132,7 @@
 									</a>
 								</div>
 							</div>
-
 						</div>
-
 					</div>
 				</div>
 			</div>
@@ -156,7 +153,7 @@
 											<img src="images/jafc.png" alt="jafc">
 										</figure>
 									</a>
-									<p>カテゴリ別&作品一覧ページの制作を担当しました</p>
+									<p>カテゴリ別&作品一覧ページ、英語ページの制作を担当</p>
 								</div>
 							</div>
 
@@ -170,7 +167,7 @@
 									<figure class="text-center">
 										<img src="images/shionyan00.png" alt="shionyan"><img src="images/shionyan01.JPG" alt="shionyan"><img src="images/shionyan02.JPG" alt="shionyan">
 									</figure>
-									<p>原画を担当しました</p>
+									<p>原画担当</p>
 								</div>
 							</div>
 
