プロフィール画像を変更

--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
-
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-	<head>
+<head>
+	<title>A.Inoue's Portfolio</title>
 	<meta charset="utf-8">
+	<meta http-equiv="content-language" content="ja">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-	<title>A.Inoue Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="井上敦登の自己紹介ページ" />
-	<meta name="keywords" content="井上敦登,早稲田大学大学院基幹理工学研究科表現工学専攻,及川靖広研究室,音場の可視化,VR/AR,MR" />
+	<meta name="description" content="井上敦登の自己紹介ページです。早稲田大学にて音を可視化する研究を行なっている他、アルバイトにてWebサイトの開発・運用を行なっています" />
+	<!--Facebook/Twitter用-->
 	<meta property="og:title" content="A.Inoue's Portfolio"/>
 	<meta property="og:url" content="https://atsuhan.github.io/"/>
 	<meta property="og:description" content="井上敦登の自己紹介ページ"/>
 	<meta property="og:image" content="">
 	<meta name="twitter:title" content="A.Inoue's Portfolio" />
 	<meta name="twitter:url" content="https://atsuhan.github.io/" />
-	<!-- meta name="twitter:card" content="" / -->
-	<!-- link rel="shortcut icon" href="favicon.ico" -->
+	<meta name="twitter:card" content="" />
+	<!--Facebook/Twitter用ここまで-->
+	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/modernizr-2.6.2.min.js"></script>
-
-	</head>
-	<body style="background-image: url(images/backimage.jpg);">
+</head>
+<body style="background-image: url(images/backimage.jpg);">
 
 	<div id="fh5co-main">
 		<div class="fh5co-tab-wrap">
@@ -60,186 +60,186 @@
 							<p>2015年6月 ~ 7月　マルタ共和国にて英語留学</p>
 							<p>2016年3月　早稲田大学基幹理工学部表現工学科 卒業</p>
 							<p>2016年4月　早稲田大学大学院 基幹理工学研究科 表現工学専攻 入学</p>
-							<p>2016年8月　日本音響学会 秋季研究発表会にて発表(<a href="http://www.asj.gr.jp/recommending/index.html">学生優秀賞</a>を受賞)</p>
+							<p>2016年8月　日本音響学会 秋季研究発表会にて発表(<b>学生優秀賞を受賞</b>)</p>
 							<p>2016年10月 アコースティックイメージング研究会にて発表</p>
 							<p>2016年12月 第5回 日米音響学会ジョイントミーティングにて展示発表</p>
 						</div>
 					</div>
 					<!--
 					<div class="row">
-						<div class="col-md-12 fh5co-counter">
-							<div class="fh5co-number fh5co-left">10</div>
-							<div class="fh5co-text">
-								<h3 class="border-bottom">Years of experience in Web Design</h3>
-								<p>Far far away, behind the word mountains, far from the countries.</p>
-							</div>
-						</div>
-					</div>
-				-->
-					<ul class="fh5co-social">
-						<li><a href="mailto:at.inoue22@gmail.com">Contact<span>  </span><i class="icon-envelope"></i></a></li>
-					</ul>
+					<div class="col-md-12 fh5co-counter">
+					<div class="fh5co-number fh5co-left">10</div>
+					<div class="fh5co-text">
+					<h3 class="border-bottom">Years of experience in Web Design</h3>
+					<p>Far far away, behind the word mountains, far from the countries.</p>
 				</div>
 			</div>
+		</div>
+	-->
+	<ul class="fh5co-social">
+		<li><a href="mailto:at.inoue22@gmail.com">Contact<span>  </span><i class="icon-envelope"></i></a></li>
+	</ul>
+</div>
+</div>
 
-			<div class="fh5co-tab-content" data-content="2">
-				<div class="fh5co-content-inner">
-					<div class="row">
-						<div class="col-md-12">
-							<h2>シースルー型ヘッドマウントディスプレイを用いた三次元音場情報の可視化</h2>
-							<h4>3D sound field visualization using see-through head mounted display</h4>
+<div class="fh5co-tab-content" data-content="2">
+	<div class="fh5co-content-inner">
+		<div class="row">
+			<div class="col-md-12">
+				<h2>シースルー型ヘッドマウントディスプレイを用いた三次元音場情報の可視化</h2>
+				<h4>3D sound field visualization using see-through head mounted display</h4>
 
-							<figure class="text-center">
-								<img src="images/ResearchImage.jpg" alt="vsf00">
-							</figure>
+				<figure class="text-center">
+					<img src="images/ResearchImage.jpg" alt="vsf00">
+				</figure>
 
-							<figure class="text-center">
-								<img src="images/vsf02.png" alt="vsf02">
-							</figure>
+				<figure class="text-center">
+					<img src="images/vsf02.png" alt="vsf02">
+				</figure>
 
-							<div class="fh5co-feature">
-								<div class="fh5co-icon">
-									<i class="icon-graduation-cap"></i>
-								</div>
-								<div class="fh5co-text">
-									<h2>2016/12</h2>
-									<a href="pdf/2016_POMA.pdf">
-										<p>A. Inoue, Y. Ikeda, K. Yatabe and Y. Oikawa, "Three-dimensional sound-field visualization system using head mounted display and stereo camera,''  5th Joint Meet. Acoust. Soc. Am. Acoust. Soc. Jpn., Hawaii, Nov.--Dec. 2016.</p>
-									</a>
-								</div>
-							</div>
-
-							<div class="fh5co-feature">
-								<div class="fh5co-icon">
-									<i class="icon-graduation-cap"></i>
-								</div>
-								<div class="fh5co-text">
-									<h2>2016/10</h2>
-									<a href="http://contents.acoust.ias.sci.waseda.ac.jp/publications/ASJ/2016/ai_inoue_201610.pdf">
-									<p>井上敦登, 池田雄介, 矢田部浩平, 及川靖広, ``シースルー型ヘッドマウントディスプレイを用いた三次元音場情報呈示システム,'' 日本音響学会アコースティックイメージング研究会資料, vol. AI2016-3-03, Oct. 2016.</p>
-									</a>
-								</div>
-							</div>
-
-							<div class="fh5co-feature">
-								<div class="fh5co-icon">
-									<i class="icon-graduation-cap"></i>
-								</div>
-								<div class="fh5co-text">
-									<h2>2016/09</h2>
-									<a href="http://contents.acoust.ias.sci.waseda.ac.jp/publications/ASJ/2016/asj-inoue-2016sep.pdf">
-									<p>井上敦登, 池田雄介, 矢田部浩平, 及川靖広, ``ヘッドマウントディスプレイを用いた三次元音場情報呈示システム,'' 日本音響学会講演論文集, pp.1097--1098, Sep. 2016.（学生優秀発表賞受賞）.</p>
-									</a>
-								</div>
-							</div>
-						</div>
+				<div class="fh5co-feature">
+					<div class="fh5co-icon">
+						<i class="icon-graduation-cap"></i>
+					</div>
+					<div class="fh5co-text">
+						<h2>2016/12</h2>
+						<a href="pdf/2016_POMA.pdf">
+							<p>A. Inoue, Y. Ikeda, K. Yatabe and Y. Oikawa, "Three-dimensional sound-field visualization system using head mounted display and stereo camera,''  5th Joint Meet. Acoust. Soc. Am. Acoust. Soc. Jpn., Hawaii, Nov.--Dec. 2016.</p>
+						</a>
 					</div>
 				</div>
-			</div>
-			<div class="fh5co-tab-content" data-content="3">
-				<div class="fh5co-content-inner">
-					<div class="row">
-						<div class="col-md-12">
 
-							<div class="fh5co-feature">
-								<div class="fh5co-icon">
-									<i class="icon-black-tie"></i>
-								</div>
-								<div class="fh5co-text">
-									<h2>2017/02</h2>
-									<a href="http://animation.filmarchives.jp/">
-										<h3>日本アニメーション映画クラシックス</h3>
-										<figure class="text-center">
-											<img src="images/jafc.png" alt="jafc">
-										</figure>
-									</a>
-									<p>カテゴリ別&作品一覧ページ、英語ページの制作を担当</p>
-								</div>
-							</div>
-
-							<div class="fh5co-feature">
-								<div class="fh5co-icon">
-									<i class="icon-black-tie"></i>
-								</div>
-								<div class="fh5co-text">
-									<h2>2016</h2>
-									<h3>お茶なびゲート公式キャラクターしおにゃん</h3>
-									<figure class="text-center">
-										<img src="images/shionyan00.png" alt="shionyan"><img src="images/shionyan01.JPG" alt="shionyan"><img src="images/shionyan02.JPG" alt="shionyan">
-									</figure>
-									<p>原画担当</p>
-								</div>
-							</div>
-
-
-						</div>
-
+				<div class="fh5co-feature">
+					<div class="fh5co-icon">
+						<i class="icon-graduation-cap"></i>
+					</div>
+					<div class="fh5co-text">
+						<h2>2016/10</h2>
+						<a href="http://contents.acoust.ias.sci.waseda.ac.jp/publications/ASJ/2016/ai_inoue_201610.pdf">
+							<p>井上敦登, 池田雄介, 矢田部浩平, 及川靖広, ``シースルー型ヘッドマウントディスプレイを用いた三次元音場情報呈示システム,'' 日本音響学会アコースティックイメージング研究会資料, vol. AI2016-3-03, Oct. 2016.</p>
+						</a>
 					</div>
 				</div>
-			</div>
 
-			<div class="fh5co-tab-content" data-content="4">
-				<div class="fh5co-content-inner">
-					<div class="row">
-						<div class="col-md-12">
-							<p>研究にて使用(2年)</p>
-						</div>
-						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="85"><span><strong>Unity(C#)</strong>85%</span></div>
-						</div>
-						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="80"><span><strong>MATLAB</strong>80%</span></div>
-						</div>
-						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="30"><span><strong>C++</strong>30%</span></div>
-						</div>
-
-						<p>アルバイトにて使用(1年)</p>
-						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="50"><span><strong>PHP</strong>50%</span></div>
-						</div>
-						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="50"><span><strong>HTML5</strong>50%</span></div>
-						</div>
-						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="40"><span><strong>CSS</strong>40%</span></div>
-						</div>
-						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="30"><span><strong>Perl</strong>30%</span></div>
-						</div>
-						<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-							<div class="chart" data-percent="30"><span><strong>MySQL</strong>30%</span></div>
-						</div>
-
+				<div class="fh5co-feature">
+					<div class="fh5co-icon">
+						<i class="icon-graduation-cap"></i>
+					</div>
+					<div class="fh5co-text">
+						<h2>2016/09</h2>
+						<a href="http://contents.acoust.ias.sci.waseda.ac.jp/publications/ASJ/2016/asj-inoue-2016sep.pdf">
+							<p>井上敦登, 池田雄介, 矢田部浩平, 及川靖広, ``ヘッドマウントディスプレイを用いた三次元音場情報呈示システム,'' 日本音響学会講演論文集, pp.1097--1098, Sep. 2016.（学生優秀発表賞受賞）.</p>
+						</a>
 					</div>
 				</div>
 			</div>
 		</div>
-
-
-		<footer id="fh5co-footer">
-			<div class="row">
-				<div class="col-md-6 col-md-offset-3 text-center">
-					<small>
-						Atsuto Inoue Portfolio.
-					</small>
-				</div>
-			</div>
-		</footer>
 	</div>
+</div>
+<div class="fh5co-tab-content" data-content="3">
+	<div class="fh5co-content-inner">
+		<div class="row">
+			<div class="col-md-12">
 
-	<!-- jQuery -->
-	<script src="js/jquery.min.js"></script>
-	<!-- jQuery Easing -->
-	<script src="js/jquery.easing.1.3.js"></script>
-	<!-- Bootstrap -->
-	<script src="js/bootstrap.min.js"></script>
-	<!-- Waypoints -->
-	<script src="js/jquery.waypoints.min.js"></script>
-	<!-- Easy PieChart -->
-	<script src="js/jquery.easypiechart.min.js"></script>
-	<!-- MAIN JS -->
-	<script src="js/main.js"></script>
+				<div class="fh5co-feature">
+					<div class="fh5co-icon">
+						<i class="icon-black-tie"></i>
+					</div>
+					<div class="fh5co-text">
+						<h2>2017/02</h2>
+						<a href="http://animation.filmarchives.jp/">
+							<h3>日本アニメーション映画クラシックス</h3>
+							<figure class="text-center">
+								<img src="images/jafc.png" alt="jafc">
+							</figure>
+						</a>
+						<p>カテゴリ別&作品一覧ページ、英語ページの制作を担当</p>
+					</div>
+				</div>
 
-	</body>
+				<div class="fh5co-feature">
+					<div class="fh5co-icon">
+						<i class="icon-black-tie"></i>
+					</div>
+					<div class="fh5co-text">
+						<h2>2016</h2>
+						<h3>お茶なびゲート公式キャラクターしおにゃん</h3>
+						<figure class="text-center">
+							<img src="images/shionyan00.png" alt="shionyan"><img src="images/shionyan01.JPG" alt="shionyan"><img src="images/shionyan02.JPG" alt="shionyan">
+						</figure>
+						<p>原画担当</p>
+					</div>
+				</div>
+
+
+			</div>
+
+		</div>
+	</div>
+</div>
+
+<div class="fh5co-tab-content" data-content="4">
+	<div class="fh5co-content-inner">
+		<div class="row">
+			<div class="col-md-12">
+				<p>研究にて使用(2年)</p>
+			</div>
+			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
+				<div class="chart" data-percent="85"><span><strong>Unity(C#)</strong>85%</span></div>
+			</div>
+			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
+				<div class="chart" data-percent="80"><span><strong>MATLAB</strong>80%</span></div>
+			</div>
+			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
+				<div class="chart" data-percent="30"><span><strong>C++</strong>30%</span></div>
+			</div>
+
+			<p>アルバイトにて使用(1年)</p>
+			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
+				<div class="chart" data-percent="50"><span><strong>PHP</strong>50%</span></div>
+			</div>
+			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
+				<div class="chart" data-percent="50"><span><strong>HTML5</strong>50%</span></div>
+			</div>
+			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
+				<div class="chart" data-percent="40"><span><strong>CSS</strong>40%</span></div>
+			</div>
+			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
+				<div class="chart" data-percent="30"><span><strong>Perl</strong>30%</span></div>
+			</div>
+			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
+				<div class="chart" data-percent="30"><span><strong>MySQL</strong>30%</span></div>
+			</div>
+
+		</div>
+	</div>
+</div>
+</div>
+
+
+<footer id="fh5co-footer">
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3 text-center">
+			<small>
+				Atsuto Inoue Portfolio.
+			</small>
+		</div>
+	</div>
+</footer>
+</div>
+
+<!-- jQuery -->
+<script src="js/jquery.min.js"></script>
+<!-- jQuery Easing -->
+<script src="js/jquery.easing.1.3.js"></script>
+<!-- Bootstrap -->
+<script src="js/bootstrap.min.js"></script>
+<!-- Waypoints -->
+<script src="js/jquery.waypoints.min.js"></script>
+<!-- Easy PieChart -->
+<script src="js/jquery.easypiechart.min.js"></script>
+<!-- MAIN JS -->
+<script src="js/main.js"></script>
+
+</body>
 </html>
