経歴を変更

--- a/index.html
+++ b/index.html
@@ -46,23 +46,19 @@
 							<h1>井上敦登 Atsuto Inoue</h1>
 							<p>所属 : 早稲田大学大学院 基幹理工学研究科 表現工学専攻</p>
 							<p>研究室 : <a href="http://www.acoust.ias.sci.waseda.ac.jp/">及川靖広 研究室</a></p>
-							<p>得意分野 : 音響工学、拡張現実感(AR)</p>
-							<p>アルバイト : 神保町の古本屋案内所、Webサービス開発・運用</p>
-							<p>趣味 : 釣り</p>
+							<p>専攻 : 音響工学、拡張現実感(AR)</p>
 
 							<br>
 							<h4>経歴</h4>
 							<p>1994年2月　千葉県市川市出身</p>
-
 							<p>2012年3月　早稲田高等学校 卒業</p>
-							<p>2012年4月　早稲田大学基幹理工学部 入学</p>
-							<p>2013年8月 ~ 2014年8月　弓道サークル本陣(幹事長を経験)</p>
-							<p>2015年6月 ~ 7月　マルタ共和国にて英語留学</p>
-							<p>2016年3月　早稲田大学基幹理工学部表現工学科 卒業</p>
+							<p>2012年4月　早稲田大学 基幹理工学部 入学</p>
+							<p>2016年3月　早稲田大学 基幹理工学部 表現工学科 卒業</p>
 							<p>2016年4月　早稲田大学大学院 基幹理工学研究科 表現工学専攻 入学</p>
-							<p>2016年8月　日本音響学会 秋季研究発表会にて発表(<b>学生優秀賞を受賞</b>)</p>
+							<p>2016年8月　日本音響学会 秋季研究発表会にて発表(学生優秀賞)</p>
 							<p>2016年10月 アコースティックイメージング研究会にて発表</p>
-							<p>2016年12月 第5回 日米音響学会ジョイントミーティングにて展示発表</p>
+							<p>2016年12月 5th Joint Meeting of the ASA and ASJにてポスター発表</p>
+							<p>2017年7-8月 SIGGRAPH2017にてポスター発表<p>
 						</div>
 					</div>
 					<!--
@@ -86,8 +82,8 @@
 	<div class="fh5co-content-inner">
 		<div class="row">
 			<div class="col-md-12">
-				<h2>シースルー型ヘッドマウントディスプレイを用いた三次元音場情報の可視化</h2>
-				<h4>3D sound field visualization using see-through head mounted display</h4>
+				<h2>透過型ヘッドマウントディスプレイを用いた三次元音場情報の可視化</h2>
+				<h4>visualization 3D sound field system using see-through head mounted display</h4>
 
 				<figure class="text-center">
 					<img src="images/ResearchImage.jpg" alt="vsf00">
