--- a/new-portfolio/public/index.html
+++ b/new-portfolio/public/index.html
@@ -22,7 +22,11 @@
     <link rel="stylesheet" href="/css/style.css?v=1">
   </head>
   <body>
-    <div class="wrapper">hello, world!
+    <div class="wrapper">
+      <div class="profile">
+        <h1>井上敦登　　Atsuto Inoue</h1>
+        <p>て捨てsと</p>
+      </div>
     </div>
     <!-- javascript-->
     <script src="/js/script.js?v=1"></script>
