研究画像を変更

--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
 							<p>所属 : 早稲田大学大学院 基幹理工学研究科 表現工学専攻</p>
 							<p>研究室 : <a href="http://www.acoust.ias.sci.waseda.ac.jp/">及川靖広 研究室</a></p>
 							<p>専攻 : 音響工学、拡張現実感(AR)</p>
-
 							<br>
 							<h4>経歴</h4>
 							<p>1994年2月　千葉県市川市出身</p>
@@ -89,10 +88,6 @@
 					<img src="images/ResearchImage.jpg" alt="vsf00">
 				</figure>
 
-				<figure class="text-center">
-					<img src="images/vsf02.png" alt="vsf02">
-				</figure>
-
 				<div class="fh5co-feature">
 					<div class="fh5co-icon">
 						<i class="icon-graduation-cap"></i>
@@ -100,6 +95,18 @@
 					<div class="fh5co-text">
 						<h2>2016/12</h2>
 						<a href="pdf/2016_POMA.pdf">
+							<p>A. Inoue, Y. Ikeda, K. Yatabe and Y. Oikawa, "Three-dimensional sound-field visualization system using head mounted display and stereo camera,''  5th Joint Meet. Acoust. Soc. Am. Acoust. Soc. Jpn., Hawaii, Nov.--Dec. 2016.</p>
+						</a>
+					</div>
+				</div>
+
+				<div class="fh5co-feature">
+					<div class="fh5co-icon">
+						<i class="icon-graduation-cap"></i>
+					</div>
+					<div class="fh5co-text">
+						<h2>2016/12</h2>
+						<a href="http://asa.scitation.org/doi/abs/10.1121/2.0000381">
 							<p>A. Inoue, Y. Ikeda, K. Yatabe and Y. Oikawa, "Three-dimensional sound-field visualization system using head mounted display and stereo camera,''  5th Joint Meet. Acoust. Soc. Am. Acoust. Soc. Jpn., Hawaii, Nov.--Dec. 2016.</p>
 						</a>
 					</div>
@@ -149,27 +156,10 @@
 								<img src="images/jafc.png" alt="jafc">
 							</figure>
 						</a>
-						<p>カテゴリ別&作品一覧ページ、英語ページの制作を担当</p>
+						<p>バックエンドエンジニア</p>
 					</div>
 				</div>
-
-				<div class="fh5co-feature">
-					<div class="fh5co-icon">
-						<i class="icon-black-tie"></i>
-					</div>
-					<div class="fh5co-text">
-						<h2>2016</h2>
-						<h3>お茶なびゲート公式キャラクターしおにゃん</h3>
-						<figure class="text-center">
-							<img src="images/shionyan00.png" alt="shionyan"><img src="images/shionyan01.JPG" alt="shionyan"><img src="images/shionyan02.JPG" alt="shionyan">
-						</figure>
-						<p>原画担当</p>
-					</div>
-				</div>
-
-
 			</div>
-
 		</div>
 	</div>
 </div>
@@ -178,24 +168,24 @@
 	<div class="fh5co-content-inner">
 		<div class="row">
 			<div class="col-md-12">
-				<p>研究にて使用(2年)</p>
 			</div>
 			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="85"><span><strong>Unity(C#)</strong>85%</span></div>
+				<div class="chart" data-percent="80"><span><strong>Unity(C#)</strong>85%</span></div>
 			</div>
 			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="80"><span><strong>MATLAB</strong>80%</span></div>
+				<div class="chart" data-percent="70"><span><strong>MATLAB</strong>80%</span></div>
 			</div>
 			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
 				<div class="chart" data-percent="30"><span><strong>C++</strong>30%</span></div>
 			</div>
-
-			<p>アルバイトにて使用(1年)</p>
 			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
 				<div class="chart" data-percent="50"><span><strong>PHP</strong>50%</span></div>
 			</div>
 			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="50"><span><strong>HTML5</strong>50%</span></div>
+				<div class="chart" data-percent="60"><span><strong>HTML5</strong>50%</span></div>
+			</div>
+			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
+				<div class="chart" data-percent="10"><span><strong>JavaScript</strong>40%</span></div>
 			</div>
 			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
 				<div class="chart" data-percent="40"><span><strong>CSS</strong>40%</span></div>
@@ -203,10 +193,6 @@
 			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
 				<div class="chart" data-percent="30"><span><strong>Perl</strong>30%</span></div>
 			</div>
-			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="30"><span><strong>MySQL</strong>30%</span></div>
-			</div>
-
 		</div>
 	</div>
 </div>
