--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 						<i class="icon-graduation-cap"></i>
 					</div>
 					<div class="fh5co-text">
-						<h2>2016/12</h2>
-						<a href="pdf/2016_POMA.pdf">
-							<p>A. Inoue, Y. Ikeda, K. Yatabe and Y. Oikawa, "Three-dimensional sound-field visualization system using head mounted display and stereo camera,''  5th Joint Meet. Acoust. Soc. Am. Acoust. Soc. Jpn., Hawaii, Nov.--Dec. 2016.</p>
+						<h2>2017/07</h2>
+						<a href="http://dl.acm.org/citation.cfm?id=3102243">
+							<p>A. Inoue, Y. Ikeda, K. Yatabe and Y. Oikawa, "Visualization of 3D sound field using see-through head mounted display,''SIGGRAPH'17 Posters, No. 34 , Los Angeles.</p>
 						</a>
 					</div>
 				</div>
@@ -107,7 +107,7 @@
 					<div class="fh5co-text">
 						<h2>2016/12</h2>
 						<a href="http://asa.scitation.org/doi/abs/10.1121/2.0000381">
-							<p>A. Inoue, Y. Ikeda, K. Yatabe and Y. Oikawa, "Three-dimensional sound-field visualization system using head mounted display and stereo camera,''  5th Joint Meet. Acoust. Soc. Am. Acoust. Soc. Jpn., Hawaii, Nov.--Dec. 2016.</p>
+							<p>A. Inoue, Y. Ikeda, K. Yatabe and Y. Oikawa, "Three-dimensional sound-field visualization system using head mounted display and stereo camera,''  5th Joint Meet. Acoust. Soc. Am. Acoust. Soc. Jpn., Hawaii.</p>
 						</a>
 					</div>
 				</div>
@@ -119,7 +119,7 @@
 					<div class="fh5co-text">
 						<h2>2016/10</h2>
 						<a href="http://contents.acoust.ias.sci.waseda.ac.jp/publications/ASJ/2016/ai_inoue_201610.pdf">
-							<p>井上敦登, 池田雄介, 矢田部浩平, 及川靖広, ``シースルー型ヘッドマウントディスプレイを用いた三次元音場情報呈示システム,'' 日本音響学会アコースティックイメージング研究会資料, vol. AI2016-3-03, Oct. 2016.</p>
+							<p>井上敦登, 池田雄介, 矢田部浩平, 及川靖広, ``シースルー型ヘッドマウントディスプレイを用いた三次元音場情報呈示システム,'' 日本音響学会アコースティックイメージング研究会資料, vol. AI2016-3-03</p>
 						</a>
 					</div>
 				</div>
@@ -131,7 +131,8 @@
 					<div class="fh5co-text">
 						<h2>2016/09</h2>
 						<a href="http://contents.acoust.ias.sci.waseda.ac.jp/publications/ASJ/2016/asj-inoue-2016sep.pdf">
-							<p>井上敦登, 池田雄介, 矢田部浩平, 及川靖広, ``ヘッドマウントディスプレイを用いた三次元音場情報呈示システム,'' 日本音響学会講演論文集, pp.1097--1098, Sep. 2016.（学生優秀発表賞受賞）.</p>
+							<p>井上敦登, 池田雄介, 矢田部浩平, 及川靖広, ``ヘッドマウントディスプレイを用いた三次元音場情報呈示システム,'' 日本音響学会講演論文集, pp.1097--1098.</p>
+							<p>学生優秀発表賞受賞</p>
 						</a>
 					</div>
 				</div>
@@ -170,28 +171,19 @@
 			<div class="col-md-12">
 			</div>
 			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="80"><span><strong>Unity(C#)</strong>85%</span></div>
+				<div class="chart" data-percent="70"><span><strong>Unity(C#)</strong>70</span></div>
 			</div>
 			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="70"><span><strong>MATLAB</strong>80%</span></div>
+				<div class="chart" data-percent="60"><span><strong>MATLAB</strong>60</span></div>
 			</div>
 			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
 				<div class="chart" data-percent="30"><span><strong>C++</strong>30%</span></div>
 			</div>
 			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="50"><span><strong>PHP</strong>50%</span></div>
+				<div class="chart" data-percent="40"><span><strong>PHP</strong>50%</span></div>
 			</div>
 			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="60"><span><strong>HTML5</strong>50%</span></div>
-			</div>
-			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="10"><span><strong>JavaScript</strong>40%</span></div>
-			</div>
-			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="40"><span><strong>CSS</strong>40%</span></div>
-			</div>
-			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="30"><span><strong>Perl</strong>30%</span></div>
+				<div class="chart" data-percent="40"><span><strong>HTML5/CSS3</strong>40%</span></div>
 			</div>
 		</div>
 	</div>
