スキル削除

--- a/index.html
+++ b/index.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
 	<title>A.Inoue's Portfolio</title>
 	<meta charset="utf-8">
 	<meta http-equiv="content-language" content="ja">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="井上敦登の自己紹介ページです。早稲田大学にて音を可視化する研究を行なっている他、アルバイトにてWebサイトの開発・運用を行なっています" />
-	<!--Facebook/Twitter用-->
+	<meta name="viewport" content="width=device-width, user-scalable=0">
 	<meta property="og:title" content="A.Inoue's Portfolio"/>
 	<meta property="og:url" content="https://atsuhan.github.io/"/>
 	<meta property="og:description" content="井上敦登の自己紹介ページ"/>
-	<meta property="og:image" content="">
 	<meta name="twitter:title" content="A.Inoue's Portfolio" />
 	<meta name="twitter:url" content="https://atsuhan.github.io/" />
-	<meta name="twitter:card" content="" />
-	<!--Facebook/Twitter用ここまで-->
-	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -27,14 +18,12 @@
 	<script src="js/modernizr-2.6.2.min.js"></script>
 </head>
 <body style="background-image: url(images/backimage.jpg);">
-
 	<div id="fh5co-main">
 		<div class="fh5co-tab-wrap">
 			<ul class="fh5co-tab-menu">
 				<li class="active"><a href="#" data-tab="1"><span class="icon icon-user"></span><span class="menu-text">Profile</span></a></li>
 				<li><a href="#" data-tab="2"><span class="icon icon-graduation-cap"></span><span class="menu-text">Research</span></a></li>
 				<li><a href="#" data-tab="3"><span class="icon icon-black-tie"></span><span class="menu-text">Works</span></a></li>
-				<li><a href="#" data-tab="4" data-pie="yes"><span class="icon-pencil"></span><span class="menu-text">Skills</span></a></li>
 			</ul>
 			<div class="fh5co-tab-content active" data-content="1">
 				<div class="fh5co-content-inner">
@@ -43,7 +32,7 @@
 							<figure class="text-center">
 								<img src="images/profile_img.jpg">
 							</figure>
-							<h1>井上敦登 Atsuto Inoue</h1>
+							<h1>Atsuto Inoue 井上敦登</h1>
 							<p>所属 : 早稲田大学大学院 基幹理工学研究科 表現工学専攻</p>
 							<p>研究室 : <a href="http://www.acoust.ias.sci.waseda.ac.jp/">及川靖広 研究室</a></p>
 							<p>専攻 : 音響工学、拡張現実感(AR)</p>
@@ -58,23 +47,23 @@
 							<p>2016年10月 アコースティックイメージング研究会にて発表</p>
 							<p>2016年12月 5th Joint Meeting of the ASA and ASJにてポスター発表</p>
 							<p>2017年7-8月 SIGGRAPH2017にてポスター発表<p>
+							</div>
 						</div>
+						<!--
+						<div class="row">
+						<div class="col-md-12 fh5co-counter">
+						<div class="fh5co-number fh5co-left">10</div>
+						<div class="fh5co-text">
+						<h3 class="border-bottom">Years of experience in Web Design</h3>
+						<p>Far far away, behind the word mountains, far from the countries.</p>
 					</div>
-					<!--
-					<div class="row">
-					<div class="col-md-12 fh5co-counter">
-					<div class="fh5co-number fh5co-left">10</div>
-					<div class="fh5co-text">
-					<h3 class="border-bottom">Years of experience in Web Design</h3>
-					<p>Far far away, behind the word mountains, far from the countries.</p>
 				</div>
 			</div>
-		</div>
-	-->
-	<ul class="fh5co-social">
-		<li><a href="mailto:at.inoue22@gmail.com">Contact<span>  </span><i class="icon-envelope"></i></a></li>
-	</ul>
-</div>
+		-->
+		<ul class="fh5co-social">
+			<li><a href="mailto:at.inoue22@gmail.com">Contact<span>  </span><i class="icon-envelope"></i></a></li>
+		</ul>
+	</div>
 </div>
 
 <div class="fh5co-tab-content" data-content="2">
@@ -165,29 +154,6 @@
 	</div>
 </div>
 
-<div class="fh5co-tab-content" data-content="4">
-	<div class="fh5co-content-inner">
-		<div class="row">
-			<div class="col-md-12">
-			</div>
-			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="70"><span><strong>Unity(C#)</strong>70</span></div>
-			</div>
-			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="60"><span><strong>MATLAB</strong>60</span></div>
-			</div>
-			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="30"><span><strong>C++</strong>30%</span></div>
-			</div>
-			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="40"><span><strong>PHP</strong>50%</span></div>
-			</div>
-			<div class="col-md-4 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="40"><span><strong>HTML5/CSS3</strong>40%</span></div>
-			</div>
-		</div>
-	</div>
-</div>
 </div>
 
 
